--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,36 @@
+annotated-types==0.7.0
+anyio==4.8.0
+bidict==0.23.1
 blinker==1.9.0
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
+h11==0.14.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
+marshmallow==3.26.0
 mysql-connector-python==9.1.0
+packaging==24.2
 psycopg2-binary==2.9.10
+pydantic==2.10.6
+pydantic_core==2.27.2
 PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.0.1
+python-engineio==4.11.2
+python-socketio==5.12.1
+simple-websocket==1.1.0
+sniffio==1.3.1
 SQLAlchemy==2.0.37
+starlette==0.45.3
 typing_extensions==4.12.2
 Werkzeug==3.1.3
+wsproto==1.2.0
