--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
 cryptography==44.0.1
+dnspython==2.7.0
+eventlet==0.39.0
 exceptiongroup==1.2.2
 Flask==3.1.0
 Flask-Cors==5.0.0
@@ -13,6 +15,8 @@ Flask-JWT-Extended==4.7.1
 Flask-Mail==0.10.0
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
+gevent==24.11.1
+gevent-websocket==0.10.1
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
@@ -31,10 +35,14 @@ PyMySQL==1.1.1
 python-dotenv==1.0.1
 python-engineio==4.11.2
 python-socketio==5.12.1
+setuptools==75.8.2
 simple-websocket==1.1.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.2
