--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.8.0
+APScheduler==3.11.0
 bidict==0.23.1
 blinker==1.9.0
 cffi==1.17.1
@@ -42,6 +43,9 @@ sniffio==1.3.1
 SQLAlchemy==2.0.37
 starlette==0.45.3
 typing_extensions==4.12.2
+tzdata==2025.1
+tzlocal==5.3
+websockets==15.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 zope.event==5.0
